# dq-lang

./: .gitignore  404.html  AGENTS.md  CMakeLists.txt  GNUmakefile  LICENSE  LICENSE.md  README.md  index.html  mkdocs.yml
.gdb/: dq_printers.py
.github/workflows/: docs.yml
LICENSES/: LLVM-exception.txt
autotest/: clean.sh  dq-autotest-req-spec.md  repeat-test.sh  repeat-test_O0.sh  run-all.sh
autotest/atrunner/: CMakeLists.txt  at_runner.cpp  at_runner.h  atr_options.cpp  atr_options.h  atr_version.h  atrun_objects.h  main_atrunner.cpp  processrunner.cpp  processrunner.h  testfile.cpp  testfile.h  testfileworker.cpp  testfileworker.h
autotest/tests/: .gitignore  test1.dq
compiler/: CMakeLists.txt
compiler/ast/: attributes.cpp  attributes.h  dq_module.cpp  dq_module.h  dqc_ast.cpp  dqc_ast.h  dqm_if.cpp  dqm_if.h  expressions.cpp  expressions.h  modintf.cpp  modintf.h  module_intf.cpp  module_intf.h  module_path.cpp  module_path.h  oscope.cpp  statements.cpp  statements.h  symbols.cpp  symbols.h
compiler/builtins/: named_scopes.cpp  named_scopes.h  scope_builtins.cpp  scope_builtins.h  scope_defines.cpp  scope_defines.h
compiler/codegen/: dqc_codegen.cpp  dqc_codegen.h  ll_defs.cpp  ll_defs.h  oscope_codegen.cpp
compiler/cross-compiling-packaging/: index.html
compiler/docker-test-instructions/: index.html
compiler/dqm-format/: index.html
compiler/getting-dq-comp/: index.html
compiler/parser/: dqc_parser.cpp  dqc_parser.h  dqc_parser_expr.cpp  dqc_parser_expr.h  dqc_parser_stmt.cpp  dqc_parser_stmt.h  scf_base.cpp  scf_base.h  scf_dq.cpp  scf_dq.h
compiler/src/: comp_config.h  comp_options.cpp  comp_options.h  dqc.cpp  dqc.h  dqc_base.cpp  dqc_base.h  dqc_clargs.cpp  dqc_clargs.h  errorcodes.h  main_dq_comp.cpp  target_config.cpp  target_config.h  version.h
compiler/src_test/: test_symbols.cpp
compiler/tools/: main_dq_run.cpp
compiler/types/: otype_anyvalue.cpp  otype_anyvalue.h  otype_array.cpp  otype_array.h  otype_bool.cpp  otype_bool.h  otype_char.cpp  otype_char.h  otype_compound.cpp  otype_compound.h  otype_cstring.cpp  otype_cstring.h  otype_enum.cpp  otype_enum.h  otype_float.cpp  otype_float.h  otype_func.cpp  otype_func.h  otype_int.cpp  otype_int.h  otype_object.cpp  otype_object.h  otype_string.cpp  otype_string.h
compiler/using-dq-comp/: index.html
compiler/utils/: artifact_lock.cpp  artifact_lock.h  executable_path.cpp  executable_path.h  processrunner.cpp  processrunner.h
doc/: dq-char-int-conv.md  dq-cross-compiling.md  dq-enum-spec.md  dq-excbt-spec.md  dq-lang-for-ai.md  dq-obj-typeinfo.md  dq-property-spec.md  dq-str-v2.md  dq_anyval_spec.md  dq_anyvalue_spec.md  dq_array_spec.md  dq_build_spec.md  dq_module_impl.md  dq_module_spec.md  dq_objects_spec.md  dq_package_spec.md  dq_string_spec.md  dqm_if_format.md  use-in-methods.md
doc/dq-lang-spec/: dq-lang-spec-changelog.md  dq-lang-spec.md
docs/: getting-started.md  index.md  motivation.md
docs/compiler/: build.md  cross-compiling-packaging.md  docker-test-instructions.md  dqm-format.md  getting-dq-comp.md  optimization.md  using-dq-comp.md
docs/examples/: index.md
docs/language/: attributes-and-directives.md  basics.md  expressions.md  functions.md  interop.md  memory-and-pointers.md  modules.md  objects.md  statements.md  types.md
docs/rtl/: anyvalue.md  overview.md  strings.md  textfmt.md
docs/stdmodules/: file.md  json.md  nanonet.md  strutils.md
examples/: index.html  langdemo.dq  langdemo_braces.dq  langdemo_mod.dq
examples/basic/: exceptions.dq  forloop.dq  new_delete.dq  searchprimes.dq  test1.dq
examples/benchmarks/: binary_trees_cpp.cpp  binary_trees_dq.dq  binary_trees_rs.rs  fpc-run  gcc-run  munchausen_c.c  munchausen_dq.dq  test_dynarr_dq.dq  test_dynarr_pas.pas  test_dynarr_rs.rs  test_fp_c.c  test_fp_dq.dq  test_fp_py.py  test_gettime.dq  test_sum_dq.dq  test_sum_pas.pas
examples/console/: consoletest.dq  hello_libc.dq  helloworld.dq
examples/dynamic/: mddynarr.dq  strdarr.dq
examples/file/: fileiotest.dq
examples/json/: jsontest.dq  test_strparse.dq
examples/messages/: dq_errormsg.dq
examples/nanonet/: http_static_files.dq  simplebin_server.dq
examples/objects/: ctor_overload.dq  ctor_overload_mod.dq  dq_objects.dq  inherit_noctor.dq  inheritance.dq  objfuncref.dq
examples/preprocessor/: dq_preproc_inc1.dq  dq_preproc_inc2.dq  dq_preproc_test1.dq
examples/rtl/: dynarrayobj.dq  test_dynarray.dq  test_rterror.dq
examples/string/: cstrings.dq  txtfmt.dq
examples/time/: binary_trees.dq  binary_trees_c.c  binary_trees_cpp.cpp  binary_trees_dq.dq  binary_trees_py.py  fpc-run  gcc-run  gettime.dq  nanotime.dq  nanotime_pas.pas  rust-run  test_clock.pas  test_clock_py.py  test_clock_rs.rs  test_dynarr_cpp.cpp  test_dynarr_dq.dq  test_dynarr_pas.pas  test_dynarr_py.py  test_dynarr_rs.rs  test_fp_c.c  test_fp_dq.dq  test_fp_pas.pas  test_fp_py.py  test_fp_rs.rs  test_gettime.dq  test_sum_c  test_sum_c.c  test_sum_dq.dq  test_sum_pas.pas  test_sum_py.py  test_sum_rs.rs
getting-started/: index.html
language/attributes-and-directives/: index.html
language/basics/: index.html
language/expressions/: index.html
language/functions/: index.html
language/interop/: index.html
language/memory-and-pointers/: index.html
language/modules/: index.html
language/objects/: index.html
language/statements/: index.html
language/types/: index.html
motivation/: index.html
rtl/anyvalue/: index.html
rtl/overview/: index.html
rtl/strings/: index.html
rtl/textfmt/: index.html
sandbox/: arrays.dq  blocks.dq  constants.dq  enum.dq  for.dq  iif.dq
scratch/: README.md  dq-embedded.md  dqm_if-rework.md  inlining_lto.md  operators.md
scratch/docs/: docsplan.md  motivation.md  using_llm.md
search/: search_index.json
spec/: dq-lang-spec-changelog.md  dq-lang-spec.md  dq_module_spec.md  spec.md
stdpkg/db/: db.dq
stylesheets/: extra.css
toolchains/: aarch64-linux.cmake  armhf-linux.cmake  rv64g-linux.cmake  x86_64-win.cmake
tools/: build-llvm-mingw-ucrt.sh  package-linux-release.sh  package-windows-release.sh
(+355 files in other folders)
